--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,15 @@ File Name: styles.css
 */
 
 /* CSS Reset */
-body, header, nav, main, footer, img, h1, h3, ul {
+body,
+header,
+nav,
+main,
+footer,
+img,
+h1,
+h3,
+ul {
     margin: 0;
     padding: 0;
     border: 0;
@@ -33,7 +41,8 @@ img {
 }
 
 /* Style rules for header area */
-.mobile h1, .mobile h3 {
+.mobile h1,
+.mobile h3 {
     padding: 2%;
     text-align: center;
 }
@@ -139,4 +148,74 @@ footer {
 footer a {
     color: #f6eee4;
     text-decoration: none;
+}
+
+/* Media Query for Tablet Viewport*/
+@media screen and (min-width: 620px),
+print {
+
+    /*Tablet Viewport: Show tab-desk class, hide mobile class*/
+
+    .tab-desk {
+        display: block
+    }
+
+    .mobile {
+        display: none
+    }
+
+    /*Tablet Viewport: Style rules for nav area*/
+
+    nav li {
+        border-top: none;
+        display: inline-block;
+        font-size: 1.25em;
+        padding: 0.5em;
+
+    }
+}
+
+/* Media query for large desktop viewports*/
+@media screen and (min-width: 1921px){
+ body {
+        background: linear-gradient(to right, #f6eee4, #78593a);
+    }
+    
+    #wrapper { width: 1920px;
+    margin-bottom: 0;
+    margin-top: 0;
+    margin-left: auto;
+    margin-right: auto;
+    }
+}
+
+/*Media Query for Print*/ 
+@media print { 
+    body { 
+    background-color: white;
+    color: black;}
+    
+}
+
+/* Media Query for Desktop Viewport*/
+@media screen and (min-width: 1000px),
+print {
+    /*desktop viewport: style rules for nav area*/
+
+    nav li {
+        font-size: 1.5em;
+    }
+
+    nav li a {padding: 0.5em, 1.5em, 0.5em, 1.5em
+    }
+    
+    nav li a:hover { 
+    color: #2a1f14;
+    background-color: #f6eee4;
+    }
+    
+/* Desktop Viewport: Style rules for main content*/
+    #info ul { margin-left: 5%}
+    
+
 }
